# DataStructureWork

./: CMakeLists.txt  LICENSE  rain.cpp
Kruskal/: Datastruct.h  TEXT.txt  main.c
